# pyfluent-examples

./: .gitignore  .pre-commit-config.yaml  CNAME  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.rst  ave-p-inlet-rfile_1_1.out  avg-outlet-temp-rfile_1_1.out  cleanup-fluent-MILAKWELLS2-34604.bat  index.html  pyproject.toml  tox.ini  versions.json
.github/: dependabot.yml
.github/workflows/: ci_cd.yml  label.yml  nightly-doc-build.yml  nightly-examples-run.yml
dev/: .buildinfo  404.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
dev/examples/: index.html
doc/: Makefile  validate_png.py
doc/source/: conf.py  index.rst
examples/: README.txt
examples/00-intro/: demo.py
examples/00-released_examples/: 00-ablation.py  00-ahmed_body_workflow.py  01-brake.py  02-DOE_ML.py  02-parametric.py  03-CHT.py  04-TylerSofrinModes.py  05-radiation_headlamp.py  06-lunar_lander_thermal.py  07-species_combustor.py  README.txt
examples/001-Intro-Demo-Mixing-Elbow-Mainak-Kundu/: README.txt  demo.py
examples/002-DOE-ML-Mixing-Elbow-Shitanshu-Gohel/: FluentDOE.py  README.txt
examples/003-Tyler-Sofrin-Modes-Compressor-Ryan-OConnor/: README.txt  TylerSofrinModes.py
examples/004-Fluent-Parametric-Mainak-Kundu/: README.txt  parametric.py
examples/005-Graphics-Demo-Aseem-Jain/: README.txt  pyFluentGraphics.py
examples/007-MixingTank-WorkFlow-Sravan-Kumar/: README.txt  mixingTank.py
examples/008-MixingTank-DOE-Sravan-Kumar/: README.txt  mixingTankDOE.py
examples/009-Separator-Collection-Efficiency-Sravan-Kumar/: README.txt  oil_separator.py
examples/01-DOE-ML/: FluentDOE.py
examples/01-beta_examples/: 00-ablation.py  01-CreatePPTX.py  02-DashApp.py  03-powerPointReport.py  04-TylerSofrinModes.py  README.txt
examples/010-Steady-Vortex-VOF-Sravan-Kumar/: README.txt  steady_vortex.py
examples/011-Gravity-Separator-PID-Sravan-Kumar/: README.txt  gravitySeparatorPID.py
examples/012-Ahmed-Body-Simulation-Abhishek-Chitwar/: README.txt  ahmed_body_workflow.py
examples/013-Remote-Execution-in-Cluster-Pablo-Aguado/: README.txt  remote_parallel.py
examples/014-Brake-Thermal-PyVista-Matplotlib-Manoj-Vani/: README.txt  brake.py
examples/015-PPTX-report-generation-Ryan-OConnor/: README.txt  powerPointReport.py
examples/016-Dash-App-for-Post-processing-Ryan-OConnor/: CreatePPTX.py  DashApp.py  README.txt
examples/017-Ablation-tutorial-Ryan-OConnor/: README.txt  ablation.py
examples/018-PyFluent-ACE-Training-at-22R2-Sean-Pearson/: README.txt  demo22R2.py
examples/019-AnsysLab-exhaust-manifold-Sean-Pearson/: README.txt  exhaust_system11.py
examples/020-CHT-Shitanshu-Gohel/: CHT_Demo.py  README.txt
examples/021-Excel-Monitor-Points-Zoran-Dragojlovic/: README.txt  excelCustomization.py
examples/Ablation-tutorial/: ablation.py
examples/Ahmed-Body-Simulation/: README.txt  ahmed_body_workflow.py
examples/AnsysLab-exhaust-manifold/: README.txt  exhaust_system11.py
examples/Brake-Thermal-PyVista-Matplotlib/: brake.py
examples/CHT/: CHT_Demo.py  README.txt
requirements/: requirements.txt  requirements_build.txt  requirements_doc.txt  requirements_tests.txt
tests/: test_metadata.py
version/: index.html
version/dev/: .buildinfo  (+6 more)
(+175 files in other folders)
