[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-fluent-examples"
version = "0.1.dev0"
description = "A python wrapper for ansys fluent examples"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "importlib-metadata >=4.0",
    "ansys-fluent-core == 0.12.*",
    "ansys-fluent-parametric == 0.6.*",
    "ansys-fluent-visualization ==0.6.*"
]

[tool.flit.module]
name = "ansys.fluent.examples"

[project.urls]
Source = "https://github.com/pyansys/pyfluent-examples"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 88
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.fluent"]

[tool.coverage.report]
show_missing = true
