[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-fluent-examples"
version = "0.1.dev0"
description = "A python wrapper for ansys fluent examples"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "importlib-metadata >=4.0",
    "ansys-fluent-core == 0.12.0",
    "ansys-fluent-parametric == 0.6.0",
    "ansys-fluent-visualization ==0.6.0"
]

doc = [
"ansys-fluent-core",
"ansys-fluent-parametric",
"ansys-fluent-visualization",
"numpy",
"pandas==1.5.3",
"seaborn",
"python-pptx",
"plotly",
"openpyxl",
"sphinx==7.2.5",
"jupyter_sphinx==0.4.0",
"numpydoc==1.5.0",
"matplotlib==3.6.3",
"ansys-sphinx-theme==0.12.1",
"pypandoc==1.10",
"pytest-sphinx==0.5.0",
"sphinx-autobuild==2021.3.14",
"sphinx-autodoc-typehints==1.21.8",
"sphinx-copybutton==0.5.1",
"sphinx-gallery==0.11.1",
"sphinx-notfound-page==0.8.3",
"sphinxcontrib-websupport==1.2.4",
"sphinxemoji==0.2.0",
]

[tool.flit.module]
name = "ansys.fluent.examples"

[project.urls]
Source = "https://github.com/pyansys/pyfluent-examples"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 88
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.fluent"]

[tool.coverage.report]
show_missing = true
